# Clipforge

./: .gitignore  AUDIT_REPORT.md  BUILD_MAC.md  CLAUDE.md  CODE_SIGNING.md  FFMPEG_BUNDLING.md  INSTALLATION.md  LINTING_FIXES.md  MODULE2_SUMMARY.md  MODULE3_SUMMARY.md  MODULE4_SUMMARY.md  README.md  RELEASE.md  SETUP.md  package-lock.json  package.json  progress.md  test_ffmpeg.sh  vite.config.ts
clipforges/: 01-product-overview.md  02-technical-architecture.md  03-implementation-timeline.md  04-testing-strategy.md  CHANGELOG.md  HANDOFF.md  INDEX.md  NAVIGATION.md  README.md  data-structures.md  dependencies.md  module-01-application-shell.md  module-02-file-system-media.md  module-03-ffmpeg-integration.md  module-04-screen-recording.md  module-05-timeline-engine.md  module-06-export-rendering.md  module-07-timeline-ui.md  module-08-video-preview.md  storage-decision.md
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error_handler.rs  export.rs  export_commands.rs  ffmpeg_utils.rs  file_service.rs  main.rs  menu.rs  metadata.rs  models.rs  preview_cache.rs  preview_service.rs  protocols.rs  screen_preview.rs  subtitle.rs  subtitle_commands.rs  thumbnail.rs  timeline.rs  timeline_commands.rs  window_state.rs
src-tauri/src/commands/: ffmpeg_commands.rs  file_commands.rs  mod.rs  preview_commands.rs  recording_commands.rs
src-tauri/src/database/: mod.rs  schema.sql
src-tauri/src/ffmpeg/: error.rs  mod.rs  progress.rs
src-tauri/src/recording/: error.rs  integration.rs  linux.rs  macos.rs  mod.rs  state.rs  voice_processing.rs  windows.rs
src-tauri/tests/: integration_tests.rs
(+42 files in other folders)
