[package]
name = "clipforge"
version = "0.1.0"
description = "A desktop video editor built with Tauri and Rust"
authors = ["ClipForge Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# File system
dirs = "5.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Utilities
open = "5.0"  # For opening URLs

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Module 2: File System & Media (Database and utilities)
rusqlite = { version = "0.30", features = ["bundled"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# Module 3: FFmpeg Integration
regex = "1.10"
which = "6.0"

# Module 4: Screen Recording
async-trait = "0.1"

# Module 8: Video Preview (LRU cache for preview frames)
lru = "0.12"
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Platform-specific dependencies (will be added as needed)
[target.'cfg(target_os = "windows")'.dependencies]
# windows-capture = "1.5"  # Will add when implementing screen recording

[target.'cfg(target_os = "macos")'.dependencies]
# cocoa = "0.25"  # Will add when implementing screen recording
# core-foundation = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
# gstreamer = "0.22"  # Will add when implementing screen recording
# gstreamer-video = "0.22"
